--- a/website.css
+++ b/website.css
@@ -2,6 +2,7 @@
     margin:0px;
     padding: 0px;
     font-family: 'sans-serif';
+    font-size: 10px;
 }
 body{
     background-image: url(breast.jpg);
